# LPP-Divisor-de-Times

./: Planilha Futebol 2025.xlsx  app.py  pyproject.toml  requirements.txt
