[tool.poetry]
name = "lpp-divisor-de-times"
version = "0.1.0"
description = ""
authors = ["Heraldo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
streamlit = "^1.52.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
